extends OptionButton


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
    pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
    pass


func _on_item_selected(index: int) -> void:
    print("we are lookingg for luka")


func _on_host_button_pressed() -> void:
    print("come lukaaaa")


func _on_join_button_pressed() -> void:
    print("come lukaaaa pleaseeee")


func _on_exit_button_pressed() -> void:
    print("come lukaaaa we are begging you")
